--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -41,6 +41,8 @@
 - date: 2020-06-18
   name: "<b>Geo-Spatial Data Analysis</b>"
   events:
+    - name: "<b>Discussion on Mass Collaboration</b>"
+      time: "11:00 - 12:00"
     - name: "<b>Lunch</b>"
       time: "12:00 - 13:00"
     - name: "<b>Tutorial Session:</b> Migration Route Spatial Forecasting *by [Akin Unver](https://www.akinunver.org/)*"
