--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -5,8 +5,7 @@
     - name: "Meet and Greet"
       time: "15:00-16:00"
       
-- date: 2020-06-01 - 2020-06-14 
-  name: Pre-SICSS Period
+- name: Pre-SICSS Period: Between Monday June 1 and Sunday June 14  
        
 - date: 2020-06-15
   name: Introduction and Ethics
