--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -13,19 +13,21 @@
   name: "<b>Digital Trace Data</b>"
   events:
 
-    - name: "<b>Activities on Digital Trace Data</b>"
+    - name: "<b>Activity on Digital Trace Data</b>"
       time: "10:00 - 11:45"
     - name: "<b>Group Lunch</b>"
       time: "12:00 - 13:00"
     - name: "<b>Applying Digital Trace Data</b> (Michael Kenwick)"
       time: "13:30 - 15:00"
+    - name: "<b>Activity on Digital Trace Data</b>"
+      time: "15:30 - 17:00"
 
 - date: 2020-06-17
   name: "<b>Text as Data</b>"
   events:
-    - name: "<b>Group Exercises and Introducing Text as Data</b>"
+    - name: "<b>Activity using Text as Data</b>"
       time: "10:00 - 11:45"
-    - name: "<b>Group Lunch</b>"
+    - name: "<b>Group Lunch and Research Speed Sharing</b>"
       time: "12:00 - 1:30"
     - name: "<b>Applications with Text as Data</b> (Thomas Davidson)"
       time: "14:00 - 15:30"
@@ -33,10 +35,12 @@
 - date: 2020-06-18
   name: "<b>Surveys in the Digital Age</b>"
   events:
-    - name: "<b>Lessons on Surveys in the Digital Age</b>"
+    - name: "<b>Lessons on Machine Learning</b>"
       time: "10:00 - 11:45"
-    - name: "<b>Lunch and Research Speed Sharing </b>"
-      time: "12:00 - 14:00"
+    - name: "<b>Group Lunch </b>"
+      time: "12:00 - 13:00"
+    - name: "<b>Activity on Surveys in the Ditigal Age</b>"
+      time: "13:30 - 15:45" 
     - name: "<b>Guest Speaker</b> (Daniel Hopkins)"
       time: "16:00 - 17:30"
 
@@ -49,13 +53,13 @@
       time: "10:30 - 12:30"
     - name: "<b>Break</b>"
       time: "12:30 - 13:00"
-    - name: "<b>Exercise using Network Analysis</b>"
+    - name: "<b>Activity using Network Analysis</b>"
       time: "13:00 - 16:30"
 
 - date: 2020-06-22
   name: "<b>Experiments in the Digital Age</b>"
   events:
-    - name: "<b>Lessons on Digital Experiments</b>"
+    - name: "<b>Activity on Digital Experiments</b>"
       time: "10:00 - 11:45"
     - name: "<b>Lunch and Guest Speaker</b> (Yanna Krupnikov)"
       time: "12:00 - 14:00"
@@ -87,7 +91,7 @@
   events:
     - name: "<b>Work on Group Projects</b>"
       time: "09:00 - 11:45"
-    - name: "<b>Lunch and Guest Speaker</b> (Arvind Narayanan)"
+    - name: "<b>Lunch Discussion with Guest Speaker</b> (Arvind Narayanan)"
       time: "12:00 - 13:30"
     - name: "<b>Work on Group Projects</b>"
       time: "13:30 - 17:00"
