Remove quotes in topic titles

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -102,19 +102,19 @@
     
 - day: Day 3
   id: day_3
-  topic: "Automated Text Analysis (coming soon)"
+  topic: Automated Text Analysis (coming soon)
 
 - day: Day 4
   id: day_4
-  topic: "Surveys in the Digital Age (coming soon)"
+  topic: Surveys in the Digital Age (coming soon)
 
 - day: Day 5
   id: day_5
-  topic: "Mass Collaboration (coming soon)"
+  topic: Mass Collaboration (coming soon)
 
 - day: Day 6
   id: day_6
-  topic: "Experiments (coming soon)"
+  topic: Experiments (coming soon)
 
 - day: Archived materials from 2019 are available below
   id: day_2019_0
