--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -5,42 +5,70 @@
       time: "10:30 - 12:30"
     - name: "<b>Break</b>"
       time: "12:30 - 13:00"
-    - name: "<b>Group exercises</b>"
-      time: "13:00 - 16:00"
+    - name: "<b>Activity on ethics</b>"
+      time: "13:00 - 15:00" 
+    - name: "<b>Break</b>"
+      time: "15:00 - 15:30
+    - name: "<b>Introduce Digital Trace Data</b>"
+      time: "15:30 - 16:30"
+    - name: "<b>Debrief</b>"
+      time: "16:30 - 17:00"
 
 
 - date: 2020-06-16
   name: "<b>Digital Trace Data</b>"
   events:
 
+    - name: "<b>Logistics</b>"
+      time: "10:00 - 10:30"
     - name: "<b>Activity on Digital Trace Data</b>"
-      time: "10:00 - 11:45"
-    - name: "<b>Group Lunch</b>"
-      time: "12:00 - 13:00"
+      time: "10:30 - 11:45"  
+    - name: "<b>Break</b>"
+      time: "11:45 - 12:00"
+    - name: "<b>Lunch and Research Speed Sharing</b>"
+      time: "12:00 - 13:15"
+    - name: "<b>Break</b>"
+      time: "13:15 - 13:30"
     - name: "<b>Applying Digital Trace Data</b> (Michael Kenwick)"
       time: "13:30 - 15:00"
+    - name: "<b>Break"
+      time: "15:00 - 15:30"
     - name: "<b>Activity on Digital Trace Data</b>"
       time: "15:30 - 17:00"
+    - name: "<b>Debrief</b>"
+      time: "17:00 - 17:30"
 
 - date: 2020-06-17
   name: "<b>Text as Data</b>"
   events:
+    - name: "<b>Logistics</b>"
+      time: "10:00 - 10:30"
     - name: "<b>Activity using Text as Data</b>"
-      time: "10:00 - 11:45"
-    - name: "<b>Group Lunch and Research Speed Sharing</b>"
-      time: "12:00 - 1:30"
+      time: "10:30 - 13:00"
+    - name: "<b>Break</b>"
+      time: "13:00 - 14:00"
     - name: "<b>Applications with Text as Data</b> (Thomas Davidson)"
       time: "14:00 - 15:30"
+    - name: "<b>Debrief</b>"
+      time: "15:30 - 16:30"
 
 - date: 2020-06-18
   name: "<b>Surveys in the Digital Age</b>"
   events:
+    - name: "<b>Logistics</b>"
+      time: "10:00 - 10:30"
     - name: "<b>Lessons on Machine Learning</b>"
-      time: "10:00 - 11:45"
+      time: "10:30 - 11:45"
+    - name: "<b>Break</b>"
+      time: "11:45 - 12:15"
     - name: "<b>Group Lunch </b>"
-      time: "12:00 - 13:00"
+      time: "12:15 - 13:15"
+    - name: "<b>Break</b>"
+      time: "13:15 - 13:30"
     - name: "<b>Activity on Surveys in the Ditigal Age</b>"
-      time: "13:30 - 15:45" 
+      time: "13:30 - 15:30" 
+    - name: "<b>Break</b>"
+      time: "15:30 - 16:00" 
     - name: "<b>Guest Speaker</b> (Daniel Hopkins)"
       time: "16:00 - 17:30"
 
@@ -54,17 +82,25 @@
     - name: "<b>Break</b>"
       time: "12:30 - 13:00"
     - name: "<b>Activity using Network Analysis</b>"
-      time: "13:00 - 16:30"
+      time: "13:00 - 16:00"
+    - name: "<b>Debrief</b>"
+      time: "16:00 - 16:30"
 
 - date: 2020-06-22
   name: "<b>Experiments in the Digital Age</b>"
   events:
+    - name: "<b>Logistics</b>"
+      time: "10:00 - 10:30"
     - name: "<b>Activity on Digital Experiments</b>"
-      time: "10:00 - 11:45"
+      time: "10:30 - 11:45"  
+    - name: "<b>Break</b>"
+      time: "11:45 - 12:00"    
     - name: "<b>Lunch and Guest Speaker</b> (Yanna Krupnikov)"
-      time: "12:00 - 14:00"
+      time: "12:00 - 13:30"
+    - name: "<b>Break</b>"
+      time: "13:30 - 14:00"  
     - name: "<b>Finalize Groups for Research Projects</b>"
-      time: "14:30 - 16:00"
+      time: "14:00 - 16:00"
 
 - date: 2020-06-23
   name: "<b>Work on Group Projects</b>"
