--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -17,14 +17,22 @@
   name: "<b>Digital Trace Data</b>"
   events:
 
-    - name: "<b>Activity on Digital Trace Data</b>"
-      time: "10:00 - 11:45"
+    - name: "<b>Logistics</b>"
+      time: "10:00 - 10:30"
+    - name: "<b>Activity on Digital Trace Data Phase 1</b>"
+      time: "10:30 - 12:00"
+    - name: "<b>Break</b>"
+      time: "12:00 - 12:15"
     - name: "<b>Group Lunch</b>"
-      time: "12:00 - 13:00"
+      time: "12:15 - 13:15"
     - name: "<b>Applying Digital Trace Data</b> (Michael Kenwick)"
       time: "13:30 - 15:00"
-    - name: "<b>Activity on Digital Trace Data</b>"
-      time: "15:30 - 17:00"
+    - name: "<b>Break</b>"
+      time: "15:00 - 15:15"
+    - name: "<b>Activity on Digital Trace Data Phase 2</b>"
+      time: "15:30 - 17:00
+    - name: "<b>Debrief</b>"
+      time: "17:00 - 17:30"
 
 - date: 2020-06-17
   name: "<b>Text as Data</b>"
