--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -1,6 +1,6 @@
 - day: Day 1
   id: day_2020_1
-  topic: Introduction and Ethics
+  topic: "Introduction and Ethics"
   events:
     - name: "Introduction to Computational Social Science"
       video: "https://www.youtube.com/embed/zGG9wPl1C5E"
@@ -49,7 +49,7 @@
     
 - day: Day 2
   id: day_2020_2
-  topic: Collecting Digital Trace Data
+  topic: "Collecting Digital Trace Data"
   events:
     - name: "What is digital trace data?"
       video: "https://www.youtube.com/embed/uuSWQN7uYhk"
@@ -102,19 +102,19 @@
     
 - day: Day 3
   id: day_3
-  topic: Automated Text Analysis
+  topic: "Automated Text Analysis"
 
 - day: Day 4
   id: day_4
-  topic: Surveys in the Digital Age
+  topic: "Surveys in the Digital Age"
 
 - day: Day 5
   id: day_5
-  topic: Mass Collaboration
+  topic: "Mass Collaboration"
 
 - day: Day 6
   id: day_6
-  topic: Experiments
+  topic: "Experiments"
 
 - day: Archived materials from 2019 are available below
   id: day_2019_0
