--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -7,23 +7,25 @@
       
 - date: 2020-06-01 - 2020-06-14 
   name: Pre-SICSS Period
+  events:
+    - name: "[Pre-SICSS Tasks](http://www.ninarva.com/markdowns/pre_SICSS_Istanbul.html#welcome)"
        
 - date: 2020-06-15
   name: Introduction and Ethics
   events:
     - name: "Introductions and Group Formation"
       time: "10:30 - 11:00"
-    - name: "Discussion on Ethics"
+    - name: "[Discussion on Ethics](https://compsocialscience.github.io/summer-institute/curriculum)"
       time: "11:00 - 12:00"
     - name: "Lunch"
       time: "12:00 - 13:00"
-    - name: "Research Presentation: Using Mobile Phones for Human Behaviour Understanding *by [Albert Ali Salah](http://www.staff.science.uu.nl/~salah006/)*"
+    - name: "Tutorial Session: Using Mobile Phones for Human Behaviour Understanding *by [Albert Ali Salah](http://www.staff.science.uu.nl/~salah006/)*"
       time: "13:00 - 15:00"
       
 - date: 2020-06-16
   name: Digital Trace Data
   events:
-    - name: "Discussion on Digital Trace Data"
+    - name: "[Discussion on Digital Trace Data](https://compsocialscience.github.io/summer-institute/curriculum)"
       time: "11:00 - 12:00"
     - name: "Lunch"
       time: "12:00 - 13:00"
@@ -33,7 +35,7 @@
 - date: 2020-06-17
   name: Digital Surveys and Text as Data
   events:
-    - name: "Discussion on Surveys in the Digital Age"
+    - name: "[Discussion on Surveys in the Digital Age](https://compsocialscience.github.io/summer-institute/curriculum)"
       time: "11:00 - 12:00"
     - name: "Lunch"
       time: "12:00 - 13:00"
@@ -43,7 +45,7 @@
 - date: 2020-06-18
   name: Mass Collaboration and Geo-Spatial Data Analysis
   events:
-    - name: "Discussion on Mass Collaboration"
+    - name: "[Discussion on Mass Collaboration](https://compsocialscience.github.io/summer-institute/curriculum)"
       time: "11:00 - 12:00"
     - name: "Lunch"
       time: "12:00 - 13:00"
@@ -53,6 +55,8 @@
 - date: 2020-06-19
   name: Social Network Analysis
   events:
+    - name: "[Discussion on Network Analysis](http://codingsocialscience.org/book/r1/node56.html)"
+      time: "11:00 - 12:00"
     - name: "Lunch"
       time: "12:00 - 13:00"
     - name: "Tutorial Session: Identifying Networks of Social Bots on Twitter Conversations *by [Onur Varol](http://www.onurvarol.com/)*"
@@ -61,6 +65,8 @@
 - date: 2020-06-20
   name: Agent-based Modelling and Simulation
   events:
+    - name: "[Discussion on Simulations and Complex Systems](http://codingsocialscience.org/book/r1/node95.html)"
+      time: "11:00 - 12:00"
     - name: "Lunch"
       time: "12:00 - 13:00"
     - name: "Tutorial Session: An Agent-Based Model of IMF Program Design *by [Merih Angin](https://womenalsoknowstuff.com/profile/merih-angin-1)*"
@@ -74,32 +80,28 @@
   events:
     - name: "Lunch and Alumni Talk"
       time: "12:00 - 13:30"
-    - name: "Office Hour"
-      time: "13:30 - 14:30"
+
 
 - date: 2020-06-23
   name: Work on Group Projects and Alumni Talks
   events:
     - name: "Lunch and Alumni Talk"
       time: "12:00 - 13:30"
-    - name: "Office Hour"
-      time: "13:30 - 14:30"
+
 
 - date: 2020-06-24
   name: Work on Group Projects and Alumni Talks
   events:
     - name: "Lunch and Alumni Talk"
       time: "12:00 - 13:30"
-    - name: "Office Hour"
-      time: "13:30 - 14:30"
+
 
 - date: 2020-06-25
   name: Work on Group Projects and Alumni Talks
   events:
     - name: "Lunch and Alumni Talk"
       time: "12:00 - 13:30"
-    - name: "Office Hour"
-      time: "13:30 - 14:30"
+
       
 - date: 2020-06-26
   name: Present Group Projects
