--- a/_data/2020/maastricht/participants.yml
+++ b/_data/2020/maastricht/participants.yml
@@ -17,3 +17,43 @@
 - name: "Valentina Golunova"
   image: /assets/images/maas-ValentinaGolunova.png
   bio: "Valentina Golunova is a PhD candidate at the Faculty of Law of Maastricht University. Her research interests lie at the intersection of fundamental rights and digital innovations. In the course of her PhD project, Valentina examines recent transformations of the EU intermediary liability framework in light of the need to afford effective protection of freedom of expression. She seeks to employ computational methods to study the impact of algorithmic content moderation on online content diversity. Furthermore, her goal is to test technical feasibility of safeguards that can be implemented to ensure free expression on the Internet."
+
+- name: "Anna Lewczuk"
+  image: /assets/images/maas-AnnaLewczuk.jpg
+  bio: "Anna is a PhD student in economics at University of Warsaw. Her research interests are focused around law & economics, constitutional economy and political economy. She completed master degrees in both law and quantitative methods in economics. Anna’s dissertation concerns the economic analysis of human rights in post-socialist states, particularly their economic effects, impact on subjective well-being of citizens, determinants and the interrelationship between standards of rights protection and economic development. Methodologically, she uses mainly spatial modelling and simultaneous equations models."
+
+- name: "Bilgecag Aydogdu"
+  image: /assets/images/maas-BilgecagAydogdu.jpg
+  bio: "Bilgecag Aydogdu is a PhD candidate at Utrecht University, in Information and Computing Sciences Faculty. Before starting his Ph.D., he studied political science, economics, development studies and data science in Paris and in Istanbul. His PhD thesis focuses on gaining insights on migration patterns to Europe through the usage of mobile phone data. He is interested in making social impact and evidence-based policy making, which leverages on private data sources. He is excited to take part in growing network of computational social scientists!"
+
+- name: "Kirils Makarovs"
+  image: /assets/images/maas-KirilsMakarovs.jpg
+  bio: "Kirils Makarovs is a PhD Candidate at the Department of Sociology, University of Essex. His research lies in the field of public understanding of science, risk perception, and conspiratorial mentality. He is also broadly interested in survey data analysis, experimental methodology, and computational approaches to studying public opinion, beliefs, and attitudes."
+
+- name: "Matthias Krönke"
+  image: /assets/images/maas-MatthiasKronke.jpg
+  bio: "Matthias is a PhD student in the Department of Political Studies at the University of Cape Town. His research focuses primarily on political parties and judicial politics in Africa. Matthias’ dissertation examines how political parties shape citizens’ satisfaction with basic service delivery on the continent. A second stream of research assesses judicial power in Africa and how it affects citizens’ perception of the courts on the one hand, and the quality of elections on the other."
+
+- name: "Agnieszka Karlińska"
+  image: /assets/images/maas-AgnieszkaKarlinska.jpg
+  bio: "Agnieszka Karlińska is a PhD candidate at the Institute of Sociology and at the Institute of Polish Literature at the University of Warsaw. She holds BA's in sociology and cultural studies, MA in sociology and MA in Polish philology. Her main research areas are sociology of law, medical sociology, sociology of literature, text analysis, and NLP. In her dissertation in sociology, she reconstructs discursive strategies adopted by forensic psychiatrists in response to the challenges and contradictions related to their role in the legal system. Using computational methods, she compares forensic psychiatric opinions with strictly medical and legal texts. In her dissertation in literary history, she employs quantitative text analysis to study stylistic and narrative shifts of the nineteenth-century crime fiction. Currently, she works on a project which aims to analyse social shaping of emotions through social media communication in the situation of the COVID-19 crisis."  
+
+- name: "Amit Zac"
+  image: /assets/images/maas-AmitZac.jpg
+  bio: "Amit Zac is a Ph.D. (DPhil) candidate at the University of Oxford, Centre for Competition Law and Policy. Before starting the doctorate, he received a law bachelor’s degree (The Hebrew University of Jerusalem) and LL.M. in Law and Economics (Erasmus University Rotterdam). He also worked as a public attorney in the Israeli Competition Authority and the Supreme Court. He is passionate about empirical legal studies and integrating law research within the wider social sciences. His research interests include economic inequality, competition law and policy and constitution law. His current research project focuses on the causal effect of competition law on economic inequality which is part of a two-year Leverhulme research project. In this project he uses different methodological approaches with a focus on panel data and syntactic control methods." 
+
+- name: "Yulia Orlova"
+  image: /assets/images/maas-YuliaOrlova.jpg
+  bio: "Yulia is a postdoctoral researcher and a lecturer at Higher School of Economics (HSE), Moscow, where she received PhD in economy in 2017. Her main research interests include regulation in network industries, especially in power sector, and antitrust cases. Yulia’s current project investigates influence of renewable energy policy in Russia on investment decisions and competition between investors. Yulia received her M.A. in Economic Geography from Moscow State University in 2006."  
+
+- name: "Maria José Schmidt-Kessen"
+  image: /assets/images/maas-MariaJose.jpg
+  bio: "Maria José Schmidt-Kessen is Assistant Professor in EU Commercial Law at Copenhagen Business School. She holds a PhD (2018) from the European University Institute in Florence in competition and intellectual property law. Her current research interests lie in the area of online platform regulation, data governance, smart contracts and the use of algorithms in trade, online gambling regulation, and legal design. Most of her work is theoretical and legal-doctrinal, but she is on a quest to better understand and apply quantitative methods in her legal research."
+ 
+- name: "Omar Vasquez Duque"
+  image: /assets/images/maas-OmarVasquez.png
+  bio: "Omar Vasquez Duque is a J.S.D. candidate at Stanford Law School. His research focuses on the application of behavioral insights to competition policy and economic regulation, and empirical analysis of law and its policy implications."
+
+- name: "Alexandru Sotropa"
+  image: /assets/images/maas-AlexandruSotropa.png
+  bio: "Alexandru Sotropa is an external PhD candidate within University of Maastricht, Faculty of Law. Also, he is a practicing lawyer in Bucharest. His academic interests and professional background concern interdisciplinary issues regarding competition law, consumer protection and privacy with a focus on digital area. He aims at developing computational research skills in order to improve the academic work. Alex is also interested in policy developments and has been involved in providing feedback on legislative measures."
