change the title

--- a/_data/2020/istanbul/people.yml
+++ b/_data/2020/istanbul/people.yml
@@ -139,7 +139,7 @@ participants:
 
     - name: Özen Baş
       image: /assets/images/OzenBas.jpeg
-      bio: "Özen Baş is currently a Visiting Assistant Professor of New Media at Kadir Has University. She received her BA degrees in Sociology and Political Science & International Relations at Boğaziçi University and her doctorate in Mass Communications at the Media School at Indiana University. Her research interests include the uses of social media for political activism and collective action; visual communication, and affect. She uses quantitative social scientific methods, such as controlled experiments and quantitative content analysis."
+      bio: "Özen Baş is an Assistant Professor of New Media at Kadir Has University. She received her BA degrees in Sociology and Political Science & International Relations at Boğaziçi University and her doctorate in Mass Communications at the Media School at Indiana University. Her research interests include the uses of social media for political activism and collective action; visual communication, and affect. She uses quantitative social scientific methods, such as controlled experiments and quantitative content analysis."
       website: 
 
     - name: Betül Özturan
