--- a/_data/2020/rutgers/participants.yml
+++ b/_data/2020/rutgers/participants.yml
@@ -1,1 +1,160 @@
-- name:
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+
+- name: 
+  bio: ""
+  image: /assets/images/
+  
+- name: 
+  bio: ""
+  image: /assets/images/
+  
