--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -9,7 +9,7 @@
       time: "13:00 - 15:00"
     - name: "<b>Break</b>"
       time: "15:00 - 15:15"
-    - name: "<b>Introduce Digital Trace Data and Debrief</b>"
+    - name: "<b>Introduce Digital Trace Data and Debrief on Day 1</b>"
       time: "15:15 - 16:30"
 
 
@@ -17,14 +17,16 @@
   name: "<b>Digital Trace Data</b>"
   events:
 
-    - name: "<b>Activity on Digital Trace Data</b>"
+    - name: "<b>Welcome and Activity on Digital Trace Data</b>"
       time: "10:00 - 11:45"
     - name: "<b>Group Lunch</b>"
       time: "12:00 - 13:00"
-    - name: "<b>Applying Digital Trace Data</b> (Michael Kenwick)"
+    - name: "<b>Applications with Geographic Data</b> (Michael Kenwick)"
       time: "13:30 - 15:00"
-    - name: "<b>Activity on Digital Trace Data</b>"
-      time: "15:30 - 17:00"
+    - name: "<b>Activity on Digital Trace Phase 2</b>"
+      time: "15:30 - 17:00
+    - name: "<b>Debrief on Day Two</b>"
+      time: "17:00 - 17:30"
 
 - date: 2020-06-17
   name: "<b>Text as Data</b>"
@@ -32,7 +34,7 @@
     - name: "<b>Activity using Text as Data</b>"
       time: "10:00 - 11:45"
     - name: "<b>Group Lunch and Research Speed Sharing</b>"
-      time: "12:00 - 1:30"
+      time: "12:30 - 1:30"
     - name: "<b>Applications with Text as Data</b> (Thomas Davidson)"
       time: "14:00 - 15:30"
 
