--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -20,8 +20,8 @@
     - name: "<b>Activity on Digital Trace Data</b>"
       time: "10:00 - 11:45"
     - name: "<b>Group Lunch</b>"
-      time: "12:00 - 13:00"
-    - name: "<b>Applying Digital Trace Data</b> (Michael Kenwick)"
+      time: "12:15 - 13:15"
+    - name: "<b>Applying Geographic Trace Data</b> (Michael Kenwick)"
       time: "13:30 - 15:00"
     - name: "<b>Activity on Digital Trace Data</b>"
       time: "15:30 - 17:00"
