--- a/_data/2020/stellenbosch/schedule.yml
+++ b/_data/2020/stellenbosch/schedule.yml
@@ -9,13 +9,15 @@
   events:
     - name: "Welcome and Introduction"
     - name: "Introduction to R and R Studio"
-  events:
-  - name: "This session is based around chapters 2, 4, 6, and 8 of R 4 Data Science. It is important that you work through the chapters completely to understand the basics of working in R before we move forward with more advanced concepts. First, as shown in the video, download and install R and Rstudio. There are no exercises for this session, your task is to get setup with R and RStudio and work through the relevant chapters before we start working with the tidyverse tomorrow."
-  - name: "Relevant Chapters: [Chapter 2](https://r4ds.had.co.nz/explore-intro.html), [Chapter 4](https://r4ds.had.co.nz/workflow-basics.html), [Chapter 6](https://r4ds.had.co.nz/workflow-scripts.html), [Chapter 8](https://r4ds.had.co.nz/workflow-projects.html)"  
+    - name: "This session is based around chapters 2, 4, 6, and 8 of R 4 Data Science. It is important that you work through the chapters completely to understand the basics of working in R before we move forward with more advanced concepts. First, as shown in the video, download and install R and Rstudio. There are no exercises for this session, your task is to get setup with R and RStudio and work through the relevant chapters before we start working with the tidyverse tomorrow."
+    - name: "Relevant Chapters: [Chapter 2](https://r4ds.had.co.nz/explore-intro.html), [Chapter 4](https://r4ds.had.co.nz/workflow-basics.html), [Chapter 6](https://r4ds.had.co.nz/workflow-scripts.html), [Chapter 8](https://r4ds.had.co.nz/workflow-projects.html)"  
 
 - date: "Tuesday 9 June 2020"
   events:
     - name: "Data Transformation in R"
+    - name: "This session is based around chapter 5 of R 4 Data Science. It is important that you work through the chapter completely to understand all of the important concepts (both those covered in the session and the rest covered in the chapter). Afterwards, we have extracted a number of relevant exercises from the chapter to work through. For these exercises you can use the provided notebooks and data at: https://github.com/dougaparry/Intro-to-R to get started (download the full repo as a zip file). While the solutions for the exercises can be found on the Internet, we encourage you to work through the exercises using the chapter first to get used to solving problems with R."
+    - name: "Relevant Chapters: [Chapter 5](https://r4ds.had.co.nz/transform.html)"
+    - name: "Exercises available [here](https://github.com/dougaparry/Intro-to-R/blob/master/Exercises/1_Tuesday.md)"
 
 - date: "Wednesday 10 June 2020"
   events:
