--- a/_data/2020/stellenbosch/schedule.yml
+++ b/_data/2020/stellenbosch/schedule.yml
@@ -1,9 +1,10 @@
 - date: "Schedule Overview"
   events:
     - name: "SICSS-Stellenbosch is held virtually using a combination of asynchronous video lectures, semi-synchronous group exercises and synchronous group feedback sessions. Each day follows roughly the same schedule, as shown in this section."
-    - name: "Morning: Approximately 2h of video lectures to be watched privately to prepare for the afternoon and evening sessions."
-    - name: "Afternoon: Group exercise to be completed in small groups of participants using Slack and Zoom to coordinate and work through the exercise."
-    - name: "Evening (17:30-18:30): One-hour synchronous session with all participants to review the day's activities."
+    - name: "__Morning__: Approximately 2h of video lectures to be watched privately to prepare for the afternoon and evening sessions."
+    - name: "__Afternoon__: Group exercise to be completed in small groups of participants using Slack and Zoom to coordinate and work through the exercise."
+    - name: "__Evening__ (17:30-18:30): One-hour synchronous session with all participants to review the day's activities."
+    - name: "__Week 1 exercises__:  It is important that you work through the chapters completely to understand all of the important concepts (both those covered in the session and the rest covered in the chapter). Afterwards, we have extracted a number of relevant exercises from the chapter to work through. For these exercises you can use the provided notebooks and data at: https://github.com/dougaparry/Intro-to-R to get started (download the full repo as a zip file). While the solutions for the exercises can be found on the Internet, we encourage you to work through the exercises using the chapter first to get used to solving problems with R."
 
 - date: "Monday 8 June 2020"
   events:
@@ -15,21 +16,26 @@
 - date: "Tuesday 9 June 2020"
   events:
     - name: "Data Transformation in R"
-    - name: "This session is based around chapter 5 of R 4 Data Science. It is important that you work through the chapter completely to understand all of the important concepts (both those covered in the session and the rest covered in the chapter). Afterwards, we have extracted a number of relevant exercises from the chapter to work through. For these exercises you can use the provided notebooks and data at: https://github.com/dougaparry/Intro-to-R to get started (download the full repo as a zip file). While the solutions for the exercises can be found on the Internet, we encourage you to work through the exercises using the chapter first to get used to solving problems with R."
     - name: "Relevant Chapters: [Chapter 5](https://r4ds.had.co.nz/transform.html)"
     - name: "Exercises available [here](https://github.com/dougaparry/Intro-to-R/blob/master/Exercises/1_Tuesday.md)"
 
 - date: "Wednesday 10 June 2020"
   events:
-    - name: "Working with Data"
+    - name: "Working with Data in R"
+    - name: "Relevant Chapters: [Chapter 11](https://r4ds.had.co.nz/data-import.html), [Chapter 12](https://r4ds.had.co.nz/tidy-data.html), [Chapter 13](https://r4ds.had.co.nz/relational-data.html)
+    - name: "Exercises available [here](https://github.com/dougaparry/Intro-to-R/blob/master/Exercises/2_Wednesday.md)"
 
 - date: "Thursday 11 June 2020"
   events:
     - name: "Data Types in R"
+    - name: "Relevant Chapters: [Chapter 14](https://r4ds.had.co.nz/strings.html), [Chapter 15](https://r4ds.had.co.nz/factors.html), [Chapter 16](https://r4ds.had.co.nz/dates-and-times.html), [Chapter 20](https://r4ds.had.co.nz/vectors.html)" 
+    - name: "Exercises available [here](https://github.com/dougaparry/Intro-to-R/blob/master/Exercises/3_Thursday.md)"
 
 - date: "Friday 12 June 2020"
   events:
     - name: "Data Visualisation"
+    - name: "Relevant Chapters: [Chapter 3](https://r4ds.had.co.nz/data-visualisation.html), [Chapter 28](https://r4ds.had.co.nz/graphics-for-communication.html)"
+    - name: "Exercises available [here](https://github.com/dougaparry/Intro-to-R/blob/master/Exercises/4_Friday.md)"
 
 - date: "Monday 15 June 2020"
   events:
