--- a/_data/2020/stellenbosch/schedule.yml
+++ b/_data/2020/stellenbosch/schedule.yml
@@ -4,7 +4,7 @@
     - name: "Morning: Approximately 2h of video lectures to be watched privately to prepare for the afternoon and evening sessions."
     - name: "Afternoon: Group exercise to be completed in small groups of participants using Slack and Zoom to coordinate and work through the exercise."
     - name: "Evening (17:30-18:30): One-hour synchronous session with all participants to review the day's activities."
-    - name: "Week 1 exercises:  It is important that you work through the chapters completely to understand all of the important concepts (both those covered in the session and the rest covered in the chapter). Afterwards, we have extracted a number of relevant exercises from the chapter to work through. For these exercises you can use the provided notebooks and data at: https://github.com/dougaparry/Intro-to-R to get started (download the full repo as a zip file). While the solutions for the exercises can be found on the Internet, we encourage you to work through the exercises using the chapter first to get used to solving problems with R."
+    - name: "Week 1 exercises:  It is important that you work through the chapters completely to understand all of the important concepts (both those covered in the session and the rest covered in the chapter). Afterwards, we have extracted a number of relevant exercises from the chapter to work through. For these exercises you can use the provided notebooks and data [here](https://github.com/dougaparry/Intro-to-R) to get started (download the full repo as a zip file). While the solutions for the exercises can be found on the Internet, we encourage you to work through the exercises using the chapter first to get used to solving problems with R."
 
 - date: "Monday 8 June 2020"
   events:
