--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -19,7 +19,7 @@
 
     - name: "<b>Activity on Digital Trace Data</b>"
       time: "10:00 - 11:45"
-    - name: "<b>Group Lunch</b>"
+    - name: "<b>Group Lunch Discussions</b>"
       time: "12:15 - 13:15"
     - name: "<b>Applying Geographic Trace Data</b> (Michael Kenwick)"
       time: "13:30 - 15:00"
@@ -31,9 +31,9 @@
   events:
     - name: "<b>Activity using Text as Data</b>"
       time: "10:00 - 11:45"
-    - name: "<b>Group Lunch and Research Speed Sharing</b>"
-      time: "12:00 - 1:30"
-    - name: "<b>Applications with Text as Data</b> (Thomas Davidson)"
+    - name: "<b>Group Lunch Discussions</b>"
+      time: "12:30 - 1:30"
+    - name: "<b>Classification and Bias: The Case of Hate Speech Detection Algorithms</b> (Thomas Davidson)"
       time: "14:00 - 15:30"
 
 - date: 2020-06-18
