--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -21,7 +21,7 @@
       time: "10:00 - 11:45"
     - name: "<b>Group Lunch Discussions</b>"
       time: "12:15 - 13:15"
-    - name: "<b>Applying Geographic Trace Data</b> (Michael Kenwick)"
+    - name: "<b>Applications with Geographic Data</b> (Michael Kenwick)"
       time: "13:30 - 15:00"
     - name: "<b>Activity on Digital Trace Data</b>"
       time: "15:30 - 17:00"
@@ -41,8 +41,8 @@
   events:
     - name: "<b>Lessons on Machine Learning</b>"
       time: "10:00 - 11:45"
-    - name: "<b>Group Lunch </b>"
-      time: "12:00 - 13:00"
+    - name: "<b>Group Lunch Discussions </b>"
+      time: "12:15 - 13:15"
     - name: "<b>Activity on Surveys in the Ditigal Age</b>"
       time: "13:30 - 15:45" 
     - name: "<b>Guest Speaker</b> (Daniel Hopkins)"
