--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -78,21 +78,30 @@
 
 - date: 2020-06-22
   name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: Festival details are posted on the [SICSS Festival page](https://compsocialscience.github.io/summer-institute/2020/festival).
 
 - date: 2020-06-23
   name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: Festival details are posted on the [SICSS Festival page](https://compsocialscience.github.io/summer-institute/2020/festival).
 
 - date: 2020-06-24
   name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: Festival details are posted on the [SICSS Festival page](https://compsocialscience.github.io/summer-institute/2020/festival).
 
 - date: 2020-06-25
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
     - name: "3:00 - 4:00 Student meetings with guest speaker"
     - name: "4:00 - 6:00 Elizabeth Bruch: Title TBA"
+    - name: Festival details are posted on the [SICSS Festival page](https://compsocialscience.github.io/summer-institute/2020/festival).
 
 - date: 2020-06-26
   name: Present group projects and/or participate in SICSS Festival
   events:
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
+    - name: Festival details are posted on the [SICSS Festival page](https://compsocialscience.github.io/summer-institute/2020/festival).
+
