--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -77,22 +77,22 @@
   name: Day off
 
 - date: 2020-06-22
-  name: Work on group projects (optional) and/or participate in [SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)
+  name: "Work on group projects (optional) and/or participate in [SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)"
 
 - date: 2020-06-23
-  name: Work on group projects (optional) and/or participate in [SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)
+  name: Work on group projects (optional) and/or participate in SICSS Festival
 
 - date: 2020-06-24
-  name: Work on group projects (optional) and/or participate in [SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)
+  name: Work on group projects (optional) and/or participate in SICSS Festival
 
 - date: 2020-06-25
-  name: Work on group projects (optional) and/or participate in [SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)
+  name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
     - name: "3:00 - 4:00 Student meetings with guest speaker"
     - name: "4:00 - 6:00 Elizabeth Bruch: Title TBA"
 
 - date: 2020-06-26
-  name: Present group projects and/or participate in [SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)
+  name: Present group projects and/or participate in SICSS Festival
   events:
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
