--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -79,28 +79,28 @@
 - date: 2020-06-22
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
-    - name: "[SICSS Festival information](https://compsocialscience.github.io/summer-institute/2020/festival)"
+    - name: "12:00 - 1:00 Panel discussion on teaching computational social science. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
 
 - date: 2020-06-23
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
-    - name: "[SICSS Festival information](https://compsocialscience.github.io/summer-institute/2020/festival)"
+    - name: "3:30 - 4:30 Optional: Panel discussion on diversity in computational social science. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
 
 - date: 2020-06-24
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
-    - name: "[SICSS Festival information](https://compsocialscience.github.io/summer-institute/2020/festival)"
+    - name: "1:00 - 2:30 Optional: Using Empirica for high-throughput virtual lab experiments. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
 
 - date: 2020-06-25
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
+    - name: "11:00 - 12:00 Optional: Creating open source software as part of an academic career. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
     - name: "3:00 - 4:00 Student meetings with guest speaker"
     - name: "4:00 - 6:00 Elizabeth Bruch: Title TBA"
-    - name: "[SICSS Festival information](https://compsocialscience.github.io/summer-institute/2020/festival)"
 
 - date: 2020-06-26
   name: Present group projects and/or participate in SICSS Festival
   events:
+    - name: "10:00 - 11:00 Optional: Opportunities and challenges with industry collaborations. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)."
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
-    - name: "[SICSS Festival information](https://compsocialscience.github.io/summer-institute/2020/festival)"
